feat: add name storage

--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,8 @@
         "default_title": "Simple Timer",
         "default_popup": "popup.html"
     },
-    "options_page": "options.html"
+    "options_page": "options.html",
+    "permissions": [
+        "storage"
+    ]
 }
