--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,8 @@
     "options_page": "options.html",
     "permissions": [
         "storage"
-    ]
+    ],
+    "background": {
+        "service_worker": "background.js"
+    }
 }
