--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
     "options_page": "options.html",
     "permissions": [
         "storage",
-        "alarms"
+        "alarms",
+        "notifications"
     ],
     "background": {
         "service_worker": "background.js"
